fixed posts to behind login wall, fixed templates, login required, models

--- a/application/static/css/main.css
+++ b/application/static/css/main.css
@@ -1,3 +1,7 @@
 #header_jumbotron {
     height: 400px;
 }
+
+#body_main {
+    margin: 30px;
+}
